RESOLVED FIXED181231
REGRESSION(r223253): Broke ResourceLoadStatistics layout tests for non-Cocoa ports
https://bugs.webkit.org/show_bug.cgi?id=181231
Summary REGRESSION(r223253): Broke ResourceLoadStatistics layout tests for non-Cocoa ...
Michael Catanzaro
Reported 2018-01-02 17:47:10 PST
r223253 broke ResourceLoadStatistics layout tests for non-Cocoa ports because it added new WebKitTestRunner API that is implemented only for Cocoa ports.
Attachments
Patch (10.63 KB, patch)
2018-01-02 17:56 PST, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2018-01-02 17:56:55 PST
Michael Catanzaro
Comment 2 2018-01-02 18:02:35 PST
Mmm, this one needs an owner review.
Alex Christensen
Comment 3 2018-01-02 18:09:26 PST
Comment on attachment 330360 [details] Patch r=me
WebKit Commit Bot
Comment 4 2018-01-02 18:34:22 PST
Comment on attachment 330360 [details] Patch Clearing flags on attachment: 330360 Committed r226346: <https://trac.webkit.org/changeset/226346>
WebKit Commit Bot
Comment 5 2018-01-02 18:34:23 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-01-02 18:35:18 PST
Note You need to log in before you can comment on or make changes to this bug.